src/snapshots/green_tea__scanner__test__scan_import.snap
---
source: src/scanner.rs
expression: "{> import user.{User}\n{{ name }}"
---
[
    (
        OpenLine,
        0..1,
    ),
    (
        Import,
        3..9,
    ),
    (
        ImportDetails(
            "user.{User}",
        ),
        10..21,
    ),
    (
        CloseLine,
        21..21,
    ),
    (
        OpenValue,
        22..23,
    ),
    (
        IdentifierOrGleamToken(
            "name",
        ),
        25..29,
    ),
    (
        CloseValue,
        30..31,
    ),
]
