src/snapshots/green_tea__scanner__test__scan_single_parens.snap
---
source: src/scanner.rs
expression: "Hello { name }, good to meet you"
---
[
    (
        Text(
            "Hello { name }, good to meet you",
        ),
        0..31,
    ),
]
